# ucu_parallel_grep

./: CMakeLists.txt  README.md
inc/: config.h  precise_time.h
py_scripts/: build_plot.py  script.py
results/: total_time.txt
src/: main.cpp
